[project]
name = "gns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "numpy>=2.3.5",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "torch==2.8.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.7.0",
    "tree>=0.2.4",
]
